--- a/RanchRodeo/RRRiderViewController.xib
+++ b/RanchRodeo/RRRiderViewController.xib
@@ -65,7 +65,11 @@
                     <rect key="frame" x="20" y="110" width="240" height="48"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="next"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="Zbl-ep-yc5"/>
+                        <outlet property="nextControl" destination="V6g-He-fEX" id="SVC-nF-lN3"/>
+                    </connections>
                 </textField>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Enter rider's last name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g9S-uH-MO7">
                     <rect key="frame" x="268" y="81" width="173" height="21"/>
@@ -83,7 +87,11 @@
                     <rect key="frame" x="268" y="110" width="240" height="48"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="next"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="Kxf-ju-AMf"/>
+                        <outlet property="nextControl" destination="aoM-Yh-Q90" id="voJ-j6-Ixn"/>
+                    </connections>
                 </textField>
                 <stepper opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="2" minimumValue="2" maximumValue="4" translatesAutoresizingMaskIntoConstraints="NO" id="kjC-AV-yhv">
                     <rect key="frame" x="574" y="119" width="94" height="29"/>
