update current data model and rider edit view

--- a/RanchRodeo/RRRiderViewController.xib
+++ b/RanchRodeo/RRRiderViewController.xib
@@ -20,6 +20,7 @@
                 <outlet property="tableView" destination="S8Z-z2-suo" id="dhq-ks-GuH"/>
                 <outlet property="teamNumberLabel" destination="sOZ-4U-I4k" id="H2e-07-3ks"/>
                 <outlet property="teamNumberStepper" destination="4tx-1Z-UxQ" id="gg9-Q1-6VC"/>
+                <outlet property="teamNumberView" destination="dk2-WY-J94" id="ItD-We-LXI"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -91,6 +92,9 @@
                     <subviews>
                         <stepper opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minimumValue="1" maximumValue="4" translatesAutoresizingMaskIntoConstraints="NO" id="4tx-1Z-UxQ">
                             <rect key="frame" x="158" y="51" width="94" height="29"/>
+                            <connections>
+                                <action selector="teamNumberDidUpdate:" destination="-1" eventType="valueChanged" id="gw4-Od-YVE"/>
+                            </connections>
                         </stepper>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sOZ-4U-I4k">
                             <rect key="frame" x="100" y="44" width="50" height="43"/>
@@ -113,6 +117,9 @@
                 </label>
                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Va1-Lp-ZG6">
                     <rect key="frame" x="619" y="178" width="51" height="31"/>
+                    <connections>
+                        <action selector="isMemberOfTeamSwitchChanged:" destination="-1" eventType="valueChanged" id="NWQ-hD-srz"/>
+                    </connections>
                 </switch>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="S8Z-z2-suo">
                     <rect key="frame" x="684" y="66" width="320" height="299"/>
