--- a/RanchRodeo/RRRiderViewController.xib
+++ b/RanchRodeo/RRRiderViewController.xib
@@ -105,7 +105,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="0.5" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.77120685577392578" green="0.77115458250045776" blue="0.77118515968322754" alpha="0.5" colorSpace="calibratedRGB"/>
                 </view>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Member of Team?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sTx-6E-EGh">
                     <rect key="frame" x="426" y="183" width="139" height="21"/>
